# QRkot_spreadsheets

./: .env.example  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3cb0e7fe1894_add_user_table.py  5148f86d6879_add_charityproject_and_donation_tables.py
app/api/: routers.py  validators.py
app/api/endpoints/: charity_project.py  donation.py  google_api.py  user.py
app/core/: config.py  google_client.py
app/crud/: base.py  charity_project.py  donation.py
app/models/: base.py  charity_project.py  donation.py
app/schemas/: charity_project.py  donation.py
app/services/: invest.py  report.py
